sfdx-source/force-app/main/default/objects/Payment_Account__c/Payment_Account__c.object-meta.xml
<CustomObject>
    <label>Payment Account</label>
    <nameField>
        <displayFormat>PA-{00000000}</displayFormat>
        <label>Payment Account Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Accounts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>