sfdx-source/force-app/main/default/objects/Payment_Account__c/fields/Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Address_Line_1__c</fullName>
    <description>LEM-1371: Payment Account Object setup</description>
    <inlineHelpText>Captures billing street</inlineHelpText>
    <label>Address Line 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>