sfdx-source/force-app/main/default/objects/Payment_Account__c/fields/Agreement__c.field-meta.xml
<CustomField>
    <fullName>Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-3150: Store Agreement record Id</description>
    <label>Agreement</label>
    <referenceTo>Agreement__c</referenceTo>
    <relationshipLabel>Payment Accounts</relationshipLabel>
    <relationshipName>Payment_Accounts_Agreement</relationshipName>
    <type>Lookup</type>
</CustomField>