sfdx-source/force-app/main/default/objects/Payment_Account__c/fields/Bank_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Number__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>LEM-1150: This field used to store Bank account number.</description>
    <inlineHelpText>Please enter the correct Bank Account Number length (AUS = 6-10 digits, US = 6-17 digits, NZ = 13-16 digits, CAN = 7-12 digits)</inlineHelpText>
    <label>Bank Account Number</label>
    <length>50</length>
    <maskChar>X</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>