sfdx-source/force-app/main/default/objects/Payment_Account__c/fields/Bank_Info_Populated__c.field-meta.xml
<CustomField>
    <fullName>Bank_Info_Populated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-16281</description>
    <label>Bank Info Populated</label>
    <type>Checkbox</type>
</CustomField>