sfdx-source/force-app/main/default/objects/Payment_Account__c/fields/Bill_To_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Company_Name__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-2029: Refers to the billing entity of the MX</description>
    <inlineHelpText>Refers to the billing entity of the MX</inlineHelpText>
    <label>Bill To Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>