sfdx-source/force-app/main/default/objects/Payment_Account__c/fields/Billing_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact_Email__c</fullName>
    <description>LEM-1285: Formula field to get the Email from Contact lookup field</description>
    <formula>Billing_Contact_Name__r.Email</formula>
    <label>Billing Contact Email</label>
    <type>Text</type>
</CustomField>