sfdx-source/force-app/main/default/objects/Payment_Account__c/fields/Billing_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-1371: Field to be only used when Record Type is Invoice. Payment Account record type uses the Contact related list for Billing Contact Name (is n:n relationship).</description>
    <inlineHelpText>Captures the first name, last name, and email address to be setup in NetSuite</inlineHelpText>
    <label>Billing Contact Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Payment Accounts</relationshipLabel>
    <relationshipName>Payment_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>