sfdx-source/force-app/main/default/objects/Payment_Account__c/fields/Business_Account__c.field-meta.xml
<CustomField>
    <fullName>Business_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-2506: Signifies the business account this payment account is related to.</description>
    <label>Business Account</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Business</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Channel Partner</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payment Accounts</relationshipLabel>
    <relationshipName>Payment_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>