sfdx-source/force-app/main/default/objects/Payment_Account__c/fields/Business_DoorDash_Legal_Entity__c.field-meta.xml
<CustomField>
    <fullName>Business_DoorDash_Legal_Entity__c</fullName>
    <description>LEM-3531: Read Business Account DoorDash Legal Entity Field Value</description>
    <formula>IF(
        NOT ISBLANK(TEXT(DoorDash_Legal_Entity__c)),
        Text(DoorDash_Legal_Entity__c),
        IF(RecordType.Name = &apos;Invoice&apos; &amp;&amp;
        !$Setup.Sync_With_Netsuite_Process__c.Restlet_API_Call__c &amp;&amp;
        ISBLANK(TEXT(DoorDash_Legal_Entity__c)),
        Business_Account__r.DoorDash_Legal_Entity__c,
        null
        )
        )</formula>
    <label>Business DoorDash Legal Entity</label>
    <type>Text</type>
</CustomField>