sfdx-source/force-app/main/default/objects/Payment_Account__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <description>LEM-4702: It represents business unit of payment account.</description>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Drive</fullName>
            </value>
            <value>
                <fullName>Marketplace</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>