sfdx-source/force-app/main/default/objects/Payment_Account__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>LEM-1371: Payment Account Object setup</description>
    <inlineHelpText>Captures billing city</inlineHelpText>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>