sfdx-source/force-app/main/default/objects/Payment_Account__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>LEM-1371: Payment Account Object setup</description>
    <inlineHelpText>Captures billing country</inlineHelpText>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>