sfdx-source/force-app/main/default/objects/Payment_Account__c/fields/Country_Code_Alpha_2__c.field-meta.xml
<CustomField>
    <fullName>Country_Code_Alpha_2__c</fullName>
    <description>LEM-1285: Given a country, calculates the Alpha-2 ISO Code. Currently used for Netsuite integration.</description>
    <formula>Case( Country__c ,
&apos;United States&apos;, &apos;US&apos;,
&apos;Canada&apos;, &apos;CA&apos;,
&apos;Australia&apos;, &apos;AU&apos;,
&apos;New Zealand&apos;, &apos;NZ&apos;,
&apos;Japan&apos;, &apos;JP&apos;,
&apos;Germany&apos;, &apos;DE&apos;,
NULL)</formula>
    <label>Country Code (Alpha-2)</label>
    <type>Text</type>
</CustomField>