sfdx-source/force-app/main/default/objects/Payment_Account__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <description>LEM-1371: Payment Account Object setup</description>
    <inlineHelpText>Captures billing currency</inlineHelpText>
    <label>Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Currency</valueSetName>
    </valueSet>
</CustomField>