sfdx-source/force-app/main/default/objects/Payment_Account__c/fields/Disable_Mx_form_submission_for_this_URL__c.field-meta.xml
<CustomField>
    <fullName>Disable_Mx_form_submission_for_this_URL__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Captures the decision if Nintex form is expired or not.</description>
    <label>Disable Mx form submission for this URL</label>
    <type>Checkbox</type>
</CustomField>