sfdx-source/force-app/main/default/objects/Payment_Account__c/fields/DoorDash_Legal_Entity__c.field-meta.xml
<CustomField>
    <fullName>DoorDash_Legal_Entity__c</fullName>
    <description>LEM-3150: DoorDash Legal Entity</description>
    <label>DoorDash Legal Entity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DoorDash_Legal_Entity</valueSetName>
    </valueSet>
</CustomField>