sfdx-source/force-app/main/default/objects/Payment_Account__c/fields/Drive_Nintex_ID__c.field-meta.xml
<CustomField>
    <fullName>Drive_Nintex_ID__c</fullName>
    <description>LEM-9127:This field stores the workflow instance and also serves as identification of the source that initiated the change of payment method on the account.</description>
    <label>Drive Nintex ID</label>
    <type>TextArea</type>
</CustomField>