sfdx-source/force-app/main/default/objects/Payment_Account__c/fields/Encrypted_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Encrypted_Record_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Encrypted Record Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>