sfdx-source/force-app/main/default/objects/Payment_Account__c/fields/Entity_Type__c.field-meta.xml
<CustomField>
    <fullName>Entity_Type__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>LEM-1150: This field used to store type of entity.</description>
    <inlineHelpText>Signifies the type of entity of the Mx. Required for setting up banking.</inlineHelpText>
    <label>Entity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Company</fullName>
            </value>
            <value>
                <fullName>LLC</fullName>
            </value>
            <value>
                <fullName>Partnerships</fullName>
            </value>
            <value>
                <fullName>Corporation</fullName>
            </value>
            <value>
                <fullName>Sole Proprietorship</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>