sfdx-source/force-app/main/default/objects/Payment_Account__c/fields/Institution_Number__c.field-meta.xml
<CustomField>
    <fullName>Institution_Number__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>LEM-1150: To store Institution number.
LEM-3993: Converted to text field to allow storing leading zeros.</description>
    <inlineHelpText>For Canadian merchants, please enter the merchant bank&apos;s institution number.</inlineHelpText>
    <label>Institution Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>