sfdx-source/force-app/main/default/objects/Payment_Account__c/fields/Is_Banner_Display__c.field-meta.xml
<CustomField>
    <fullName>Is_Banner_Display__c</fullName>
    <description>LEM-3150: Returns True Or False to display Banner Message on Record Detail Page</description>
    <formula>NOT($Setup.Sync_With_Netsuite_Process__c.Restlet_API_Call__c)
&amp;&amp;  RecordType.Name = &apos;Invoice&apos;
&amp;&amp; ISBLANK( NetSuite_ID__c )</formula>
    <label>Is Banner Display</label>
    <type>Checkbox</type>
</CustomField>