sfdx-source/force-app/main/default/objects/Payment_Account__c/fields/Legacy_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <inlineHelpText>LEM-2526: This field is used for data migration from Figment to Lemonade.</inlineHelpText>
    <label>Legacy ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>