sfdx-source/force-app/main/default/objects/Payment_Account__c/fields/NetSuite_Currency__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Currency__c</fullName>
    <description>LEM-1371: Payment Account Object setup</description>
    <formula>Case(Text( CurrencyIsoCode ),
&quot;USD&quot;, 1,
&quot;CAD&quot;, 3,
&quot;AUD&quot;, 5,
NULL
)</formula>
    <inlineHelpText>Sets the NetSuite ID for the currency assigned to the Account in NetSuite. Leveraged by integration layer.</inlineHelpText>
    <label>NetSuite Currency</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>