sfdx-source/force-app/main/default/objects/Payment_Account__c/fields/NetSuite_ID__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_ID__c</fullName>
    <description>LEM-1371: Payment Account Object setup</description>
    <inlineHelpText>Captures the NetSuite record ID of the related Customer account in NetSuite.</inlineHelpText>
    <label>NetSuite ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>