sfdx-source/force-app/main/default/objects/Payment_Account__c/fields/NetSuite_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Payment_Terms__c</fullName>
    <description>LEM-1371: Payment Account Object setup</description>
    <formula>CASE(Payment_Terms__c,&quot;Net 15&quot;, 1,&quot;Net 30&quot;, 7,&quot;Net 45&quot;, 8,&quot;Net 60&quot;, 3,7)</formula>
    <inlineHelpText>Sets the NetSuite ID for the payment terms assigned to the Account in NetSuite. Leveraged by integration layer.</inlineHelpText>
    <label>NetSuite Payment Terms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>