sfdx-source/force-app/main/default/objects/Payment_Account__c/fields/NetSuite_Subsidiary__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Subsidiary__c</fullName>
    <description>LEM-1371: Payment Account Object setup</description>
    <formula>Case(CurrencyIsoCode,

&quot;USD&quot;, 1,

&quot;CAD&quot;, 2,

&quot;AUD&quot;, 4,

1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sets the NetSuite ID for the subsidiary assigned to the Account in NetSuite. Leveraged by integration layer.</inlineHelpText>
    <label>NetSuite Subsidiary</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>