sfdx-source/force-app/main/default/objects/Payment_Account__c/fields/Netsuite_Sync_Initiator__c.field-meta.xml
<CustomField>
    <fullName>Netsuite_Sync_Initiator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-3150: Capture user details on Sync With Netsuite Action</description>
    <label>NetSuite Sync Initiator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sync_With_Netsuite_User</relationshipName>
    <type>Lookup</type>
</CustomField>