sfdx-source/force-app/main/default/objects/Payment_Account__c/fields/NetSuite_Sync_Response__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Sync_Response__c</fullName>
    <description>LEM-1371: Payment Account Object setup</description>
    <inlineHelpText>Captures the response code from NetSuite for the latest sync</inlineHelpText>
    <label>NetSuite Sync Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>