sfdx-source/force-app/main/default/objects/Payment_Account__c/fields/NetSuite_Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Sync_Status__c</fullName>
    <label>NetSuite Sync Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
                <isActive>false</isActive>
                <label>Completed</label>
            </value>
            <value>
                <fullName>Failed</fullName>
                <isActive>false</isActive>
                <label>Failed</label>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Not Started</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>