sfdx-source/force-app/main/default/objects/Payment_Account__c/fields/Payment_Descriptor__c.field-meta.xml
<CustomField>
    <fullName>Payment_Descriptor__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>LEM-1150: To store Information appearing on the Mx bank statement</description>
    <inlineHelpText>Information appearing on the Mx bank statement</inlineHelpText>
    <label>Payment Descriptor</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>