sfdx-source/force-app/main/default/objects/Payment_Account__c/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>LEM-1150: To store payment method.</description>
    <inlineHelpText>If direct deposit is selected, bank account number, routing number, EIN and legal business name required for direct deposit.</inlineHelpText>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct Deposit</fullName>
            </value>
            <value>
                <fullName>Check</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>