sfdx-source/force-app/main/default/objects/Payment_Account__c/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>LEM-1371: Payment Account Object setup</description>
    <inlineHelpText>Captures payment terms</inlineHelpText>
    <label>Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Payment_Terms</valueSetName>
    </valueSet>
</CustomField>