sfdx-source/force-app/main/default/objects/Payment_Account__c/fields/RoutingNumber__c.field-meta.xml
<CustomField>
    <fullName>RoutingNumber__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>LEM-2387 : Routing Number of the Mx.</description>
    <inlineHelpText>Routing Number of the Mx.</inlineHelpText>
    <label>Routing Number</label>
    <length>18</length>
    <maskChar>X</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>