sfdx-source/force-app/main/default/objects/Payment_Account__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>LEM-1371: Payment Account Object setup</description>
    <inlineHelpText>Captures billing state</inlineHelpText>
    <label>State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>