sfdx-source/force-app/main/default/objects/Payment_Account__c/recordTypes/Payments.recordType-meta.xml
<RecordType>
    <fullName>Payments</fullName>
    <active>true</active>
    <label>Payments</label>
</RecordType>