sfdx-source/force-app/main/default/objects/Payment_Account__c/validationRules/Validate_Bank_Account_Number_Length.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Bank_Account_Number_Length</fullName>
    <active>true</active>
    <description>LEM-8030</description>
    <errorConditionFormula>NOT($Permission.Bypass_Payment_Account_Validation_Rules)
&amp;&amp;
NOT(ISBLANK(Bank_Account_Number__c))
&amp;&amp;
LEN(Bank_Account_Number__c) &lt; 4</errorConditionFormula>
    <errorDisplayField>Bank_Account_Number__c</errorDisplayField>
    <errorMessage>Please enter the correct Bank Account Number length (minimum 4 digits)</errorMessage>
</ValidationRule>