sfdx-source/force-app/main/default/objects/Payment_Account__c/validationRules/Validate_Institution_Number_Length.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Institution_Number_Length</fullName>
    <active>true</active>
    <description>LEM-10159
For Canada, length must equal 3</description>
    <errorConditionFormula>AND(
NOT($Permission.Bypass_Payment_Account_Validation_Rules),
NOT(ISBLANK(Institution_Number__c)),
LEN( Institution_Number__c ) != 3,
Business_Account__r.BillingCountry = &apos;Canada&apos;
)</errorConditionFormula>
    <errorDisplayField>Institution_Number__c</errorDisplayField>
    <errorMessage>Institution Number should only be 3 digits for Canada</errorMessage>
</ValidationRule>