sfdx-source/force-app/main/default/objects/Payment_Account__c/validationRules/Validate_New_Zealand_Entity_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_New_Zealand_Entity_Type</fullName>
    <active>true</active>
    <description>LEM-12047</description>
    <errorConditionFormula>AND(
NOT($Permission.Bypass_Payment_Account_Validation_Rules),
Business_Account__r.BillingCountry = &apos;New Zealand&apos;,
RecordType.Name = &apos;Payments&apos;,
NOT(
OR(
ISPICKVAL(Entity_Type__c, &quot;Company&quot;), 
ISPICKVAL(Entity_Type__c, &quot;Sole Proprietorship&quot;)
)
)
)</errorConditionFormula>
    <errorMessage>Entity Type for this payment account can only be Company or Sole Proprietorship. Please select a different value.</errorMessage>
</ValidationRule>