sfdx-source/force-app/main/default/objects/Payment_Account__c/validationRules/Validate_Restricted_Fields_Access.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Restricted_Fields_Access</fullName>
    <active>true</active>
    <description>LEM-21615: Prevent Netsuit Restricted Field update for Mxp personas.</description>
    <errorConditionFormula>AND(
  $Permission.Prevent_Payment_Account_Restricted_Fields_Update,
  RecordType.DeveloperName = $Label.PAYMENT_ACCOUNT_RECORD_TYPE,
  OR(
    ISCHANGED(NetSuite_ID__c),
    ISCHANGED(DoorDash_Legal_Entity__c),
    ISCHANGED(Payment_Terms__c),
    ISCHANGED(CurrencyIsoCode),
    ISCHANGED(Business_Unit__c)
  )
)</errorConditionFormula>
    <errorMessage>You do not have permission to update restricted fields.</errorMessage>
</ValidationRule>