sfdx-source/force-app/main/default/objects/Payment_Account__c/validationRules/Validate_Routing_Number_Input.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Routing_Number_Input</fullName>
    <active>true</active>
    <description>LEM-2837: This Validation Rule is used to validate that only numerical values are allowed to enter for Routing Number.</description>
    <errorConditionFormula>AND(
        !ISBLANK(RoutingNumber__c),
        NOT(ISNUMBER(RoutingNumber__c))
        )</errorConditionFormula>
    <errorDisplayField>RoutingNumber__c</errorDisplayField>
    <errorMessage>Please enter only numeric values for the Routing Number.</errorMessage>
</ValidationRule>