sfdx-source/force-app/main/default/objects/Payment_Account__c/listViews/All_Payment_Accounts.listView-meta.xml
<ListView>
    <fullName>All_Payment_Accounts</fullName>
    <columns>NAME</columns>
    <columns>Entity_Type__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>City__c</columns>
    <columns>State__c</columns>
    <columns>Country__c</columns>
    <columns>Billing_Contact_Name__c</columns>
    <columns>Institution_Number__c</columns>
    <columns>RoutingNumber__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Payment Accounts</label>
</ListView>